# llama-launcher

./: .eslintignore  .gitignore  .prettierignore  AGENTS.md  errors.txt  errors2.txt  errors3.txt  errors4.txt  errors5.txt  eslint.config.js  lint-output.txt  next.config.ts  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tailwind.config.ts  tsconfig.json  vitest.config.ts  worklog.md
.github/workflows/: ci.yml
.husky/: pre-commit
.mimocode/: .cron-lock
.playwright-mcp/: page-2026-07-14T08-30-37-952Z.yml  page-2026-07-14T08-31-03-554Z.yml
examples/websocket/: frontend.tsx  server.ts
scripts/: copy-standalone.js
skills/LLM/: SKILL.md
skills/VLM/: SKILL.md
skills/aminer-free-academic/: SKILL.md
skills/coding-agent/: SKILL.md
skills/content-strategy/: SKILL.md
skills/design/: canvas-and-device.md  prototype.md
skills/gift-evaluator/: SKILL.md
skills/image-edit/: SKILL.md
skills/image-understand/: SKILL.md
skills/interview-prep/: SKILL.md
skills/jd-resume-tailor/: SKILL.md
skills/job-intent-tracker/: SKILL.md
skills/marketing-mode/: skill.json
skills/multi-search-engine/: config.json
skills/pdf/: SKILL.md
skills/podcast-generate/: generate.ts
skills/pptx/: SKILL.md  batch_html2pptx.js  html2pptx1.js
skills/qingyan-research/: SKILL.md
skills/skill-creator/: SKILL.md
skills/study-buddy/: SKILL.md
skills/video-generation/: SKILL.md
skills/video-understand/: SKILL.md
skills/visual-design-foundations/: SKILL.md
skills/web-reader/: SKILL.md
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/migrations/: 001_create_models.sql  002_create_benchmarks.sql  003_create_processes.sql  004_add_model_metadata.sql  005_create_notifications.sql
src-tauri/src/: commands.rs  core.rs  lib.rs  llama.rs  logger.rs  main.rs  models.rs  processes.rs  releases.rs  system.rs  updater.rs  workspaces.rs
src-tauri/src/application/: migrations.rs  mod.rs  notification_service.rs  state.rs
src-tauri/src/domain/: config.rs  mod.rs  model.rs  notification.rs  process.rs  release.rs  system.rs  workspace.rs
src-tauri/src/logger/: correlation.rs  logger_frontend.rs  logger_levels.rs  logger_macros.rs  logger_query.rs  logger_state.rs  logger_types.rs  logger_write.rs
src-tauri/src/presentation/: download_extract.rs  download_file.rs  download_http.rs  mod.rs  model_detect.rs  model_format.rs  model_gguf.rs  model_import.rs  model_import_detect.rs  model_import_scan.rs  model_scan.rs  model_verify.rs  notification_commands.rs  process_benchmark.rs  process_control.rs  process_start.rs  release_detect.rs  release_gpu.rs  release_list.rs  settings_commands.rs  system_commands.rs  workspace_commands.rs
src-tauri/src/processes/: benchmark_runner.rs  port_allocator.rs  process_control.rs  process_manager.rs  process_metrics.rs  process_monitor.rs  process_query.rs
src/app/: globals.css  layout.tsx  page.tsx
src/components/: error-boundary.tsx
src/hooks/: use-toast.ts
src/lib/: catalog-quants.ts  catalog-releases.ts  catalog-search.ts  catalog-types.ts  catalog.ts  commands.ts  helpers-hibernate.ts  helpers-infer.ts  helpers-log.ts  helpers-mapper.ts  helpers-notification.ts  helpers-seed.ts  helpers-utils.ts  helpers.ts  invoke.ts  llama-store.ts  logger.ts  tauri-api.ts  tauri-format.ts  tauri-notification.ts  types-config.ts  types-download.ts  types-external.ts  types-model.ts  types.ts  (+6 more)
tool-results/: read_1783697798248_5c57c5f40e7a.txt  read_1783701643103_de9c3e1e0656.txt  read_1783701646705_05dcedb82991.txt  read_1783702882829_7340a4ff60cd.txt  read_1783702887007_92eb0a0c78ea.txt  read_1783703722018_a0de876f6616.txt  read_1783703730168_eb7456dbdea5.txt  read_1783704552053_959c9bbd868c.txt  read_1783707194402_bfb85e468cc8.txt  read_1783707194701_8f9e5b2b01da.txt  read_1783707197444_04b446457fb8.txt  read_1783707197833_6afd56fa5235.txt
(+260 files in other folders)
